--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mapbox-gl-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nikitabogdanov.github.io/mapbox-gl-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -9,7 +10,6 @@
     "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "react-scripts": "4.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0"
   }
