--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mapbox-gl-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nikitabogdanov.github.io/mapbox-gl-app",
+  "homepage": "http://nikitabogdanov.github.io/mapbox-gl-app/#/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "redux": "^4.0.5",
+    "redux-localstorage-simple": "^2.3.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
@@ -41,9 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.2",
     "gh-pages": "^3.1.0",
-    "react-scripts": "4.0.1",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1"
   }
 }
